# Pixeltovoxelprojector

./: .gitignore  CMakeLists.txt  README.md  README.md.in  camera_config.json  cot_message_generator.cpp  cot_network_handler.cpp  cot_network_handler.h  main.cpp  setup.py  setup.sh  visualize_voxel_grid.py  voxel_drone_detector.cpp
config/: camera_config.json  oak_d_stereo_config.json
scripts/: README_WORKFLOWS.md  analyze_motion_regions.py  clean_voxel_view.py  console_drone_monitor.py  create_metadata_json.py  examplebuildvoxelgridfrommotion.bat  export_voxel_images.py  oak_d_capture_frames.py  oak_d_stereo_server.py  run_oak_d_test.sh  setup_oak_d_pro.sh  spacevoxelviewer.py  test_realtime_detection.sh  visualize_voxel_grid.py  voxelmotionviewer.py
src/: main.cpp
src/cot/: cot_message.cpp  cot_message_generator.cpp  cot_message_generator.h  cot_network_handler.cpp  cot_network_handler.h
src/processing/: ray_voxel.cpp  rtsp_processor.cpp  voxel_drone_detector.cpp  voxel_drone_detector.h
